i added the html/css of the profile page

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
         <a href="#"><i class="fa-regular fa-square-plus"></i></a>
         <a href="#"><i class="fa-solid fa-clapperboard"></i></a>
-        <a href="#"><i class="fa-regular fa-user"></i></a>
+        <a href="profile/index.html"><img src="images/itadori.jpg" alt="user" /></a>
       </nav>
     </div>
 <!-- Javascript -->
